--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,8 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.android.support:design:23.4.0'
     compile 'com.android.support:support-v4:23.4.0'
+    compile 'com.google.firebase:firebase-core:9.0.0'
+    compile 'com.google.firebase:firebase-database:9.0.0'
 }
 
 task checkstyle(type: Checkstyle) {
@@ -46,3 +48,5 @@ task checkstyle(type: Checkstyle) {
 }
 
 preBuild.dependsOn('checkstyle')
+
+apply plugin: 'com.google.gms.google-services'
